--- a/styles/style.css
+++ b/styles/style.css
@@ -106,3 +106,47 @@
   margin-bottom: 25px;
 }
 /* footer style */
+.footer-container {
+  /* margin: auto; */
+  background-color: black;
+  width: 1600px;
+  height: 577px;
+  color: white;
+  display: flex;
+  /* gap: 30px; */
+  justify-content: center;
+}
+.section-title-2 {
+    font-weight: 700;
+    font-size: 40px;
+    text-align: left;
+    margin-bottom: 20px;
+  }
+
+.btn-secondary{
+    background-color: rgb(69, 69, 249);
+    height: 64px;
+    width: 120px;
+    border-radius: 8px;
+    border: none;
+    margin-bottom: 90px;
+  }
+  .left{
+    margin-left: 100px;
+  }
+  .left p{
+    text-align: left;
+    margin-bottom: 25px;
+  }
+  .left img{
+    margin-right: 10px;
+  }
+  .right input[type="email"]{
+    height: 50px;
+    width: 450px;
+    background-color: black;
+    border: 4px solid white;
+    border-radius: 15px;
+    margin-bottom: 20px;
+  }
+
